--- a/password.html
+++ b/password.html
@@ -3,7 +3,9 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="application.css">
-  <script type="text/javascript" src='strength.js'></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="strength.js"></script>
+
 </head>
 
 <body>
