password strength bar in html

--- a/password.html
+++ b/password.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <div>Password Strength</div>
-  <div class='meter'>
-    <div class= 'meterbar'></div>
-  </div>
-  <div>
-Enter password</div>
+  
+  <h3>
+Enter password</h3>
   <form>
    <input id='password' type="text" name="password">
   </form>
+  <div class='meter'>
+    <div class='meterbar'></div>
+  </div>  
 </body>
-</html>  
+</html>
