--- a/password.html
+++ b/password.html
@@ -10,7 +10,8 @@
 <body>
   
   <h3>
-Enter password</h3>
+Password Strength</h3>
+<h4>Score: <span id='score'></span></h4>
   <form>
    <input id='password' type="text" name="password">
   </form>
